--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,16 @@ repositories {
 }
 
 dependencies {
-    compile group: 'nu.pattern', name: 'opencv', version: '2.4.9-4'
-    testCompile 'junit:junit:4.12'
+    implementation group: 'nu.pattern', name: 'opencv', version: '2.4.9-4'
+    implementation 'org.hamcrest:hamcrest-library:1.3'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.2'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 publishing {
