--- a/build.gradle
+++ b/build.gradle
@@ -1,77 +1,82 @@
-apply plugin: 'java'
-apply plugin: 'maven-publish'
-apply plugin: 'jacoco'
 
-repositories {
-    jcenter()
-}
-
-dependencies {
-    implementation group: 'nu.pattern', name: 'opencv', version: '2.4.9-4'
-    implementation 'org.hamcrest:hamcrest-library:1.3'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.2'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-
-task sourceJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allJava
-}
-
-task packageJavadoc(type: Jar) {
-    from javadoc
-    classifier = 'javadoc'
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            groupId 'com.banyaibalazs.imageasserter'
-            artifactId 'imageasserter'
-            version '2.0.0'
-
-            from components.java
-            artifact sourceJar
-            artifact packageJavadoc
-        }
-    }
+subprojects {
 
     repositories {
-        maven {
-            name 'bintray'
-            url "https://api.bintray.com/maven/balazsbanyai/imageasserter/imageasserter/;publish=1"
-            credentials {
-                username System.getenv('BINTRAY_USER')
-                password System.getenv('BINTRAY_KEY')
+        jcenter()
+    }
+
+
+    apply plugin: 'java'
+
+    sourceSets {
+        test {
+            resources {
+                srcDirs += ["${rootProject.projectDir}/test-res/src/main/resources"]
             }
         }
     }
-}
 
-javadoc {
-    source = sourceSets.main.allJava
-    classpath = configurations.compileClasspath
-    options {
-        setMemberLevel JavadocMemberLevel.PUBLIC
-        setAuthor false
+    javadoc {
+        source = sourceSets.main.allJava
+        classpath = configurations.compileClasspath
+        options {
+            setMemberLevel JavadocMemberLevel.PUBLIC
+            setAuthor false
 
-        links "https://docs.oracle.com/javase/8/docs/api/"
+            links "https://docs.oracle.com/javase/8/docs/api/"
+        }
     }
-}
 
-
-jacocoTestReport {
-    reports {
-        xml.enabled = true
-        html.enabled = true
+    test {
+        useJUnitPlatform()
     }
-}
 
-check.dependsOn jacocoTestReport
+
+    apply plugin: 'jacoco'
+
+    jacocoTestReport {
+        reports {
+            xml.enabled = true
+            html.enabled = true
+        }
+    }
+
+    check.dependsOn jacocoTestReport
+
+
+    apply plugin: 'maven-publish'
+
+    tasks.withType(AbstractPublishToMaven) { dependsOn check }
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                groupId 'com.banyaibalazs.imageasserter'
+                artifactId project.name
+                version '2.0.0'
+
+                from components.java
+                artifact project.tasks.create(name: 'sourcesJar', type: Jar) {
+                    classifier = 'sources'
+                    from sourceSets.main.allJava
+                }
+                artifact project.tasks.create(name: 'javadocJar', type: Jar) {
+                    from javadoc
+                    classifier = 'javadoc'
+                }
+            }
+        }
+
+        repositories {
+            maven {
+                name 'bintray'
+                url "https://api.bintray.com/maven/balazsbanyai/imageasserter/imageasserter/;publish=1"
+                credentials {
+                    username System.getenv('BINTRAY_USER')
+                    password System.getenv('BINTRAY_KEY')
+                }
+            }
+        }
+    }
+
+}
